# stickers

./: .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  extract_stickers.sh  kill_exif.sh  package.json
extractor-rust/: .gitignore  Cargo.toml  Makefile
extractor-rust/src/: color.rs  extractor.rs  lib.rs  main.rs
public/: index.html
public/stickers/: stickers.json
src/: App.vue
src/components/: Sticker.vue  Stickers.vue
src/domain/: Stickers.ts
src/router/: index.ts
src/views/: HomeView.vue  StickerView.vue
