[package]
name = "extractor-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = "4.5.37"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rayon = "1.10.0"
tempfile = "3.19.1"

[profile.release-with-debug]
inherits = "release"
debug = 1
